--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,13 +10,7 @@
         "esModuleInterop": true,
         "target": "es5",
         "allowJs": true,
-        "baseUrl":"src",
-        "paths":{
-            "@components/*":["src/components/*"],
-            "@images/*":["src/images/*"],
-            "@interfaces/*":["src/interfaces/*"],
-            "@styles/*":["src/styles/*"],
-        },
+        "baseUrl": ".",
         "jsx": "react-jsx",
     },
     "include": [
