--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "webfontloader": "^1.6.28"
   },
   "scripts": {
-    "start": "webpack serve --mode development",
+    "start": "webpack serve --mode production",
+    "start:dev": "webpack serve --mode development",
     "build": "webpack --mode production",
+    "build:dev": "webpack --mode development",
     "lint": "prettier 'src/**' --check",
     "lint:fix": "prettier 'src/**' --write",
     "test": "echo \"Error: no test specified\" && exit 1",
